[package]
name = "broxi"
description = "batching proxy, respectful of rate limits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
url = "2.5.4"
